--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 :root {
+  /* Color Palette*/
   --mate-green: #123E38;
   --beige: #FBF7EB;
 }
@@ -12,6 +13,8 @@
 body {
   background-color: var(--beige);
 }
+
+/* Hero Section */
 
 .hero {
   height: 100vh;
@@ -30,9 +33,11 @@ body {
   background-color: rgba(0, 0, 0, .5);
 }
 
+/* Navbar */
+
 .nav {
   position: relative;
-  padding: 20px 30px 0 30px;
+  margin: 20px 30px 0 30px;
   height: 70px;
   display: flex;
   justify-content: space-between;
@@ -58,14 +63,16 @@ h1 {
 }
 
 .nav__menu {
+  position: absolute;
+  right: 25%;
   height: 100%;
+  width: 50%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .nav__menu ul {
   position: absolute;
-  left: 25%;
-  right: 25%;
   display: flex;
   justify-content: center;
 }
@@ -75,7 +82,7 @@ h1 {
   list-style: none;
   cursor: pointer;
   font-size: 20px;
-  font-weight: 400;
+  font-weight:400;
   color: var(--beige);
   position: relative;
 }
@@ -139,4 +146,104 @@ h1 {
   font-size: 24px;
   font-weight: 500;
   text-decoration: none;
+}
+
+/* Products Section */
+
+#products {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--mate-green);
+}
+
+.title {
+  margin-top: 50px;
+  font-size: 40px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.filter {
+  display: flex;
+  margin: 20px 0 30px;
+}
+
+.filter__item {
+  margin: 0 12px;
+  padding: 5px 16px;
+  color: var(--mate-green);
+  font-size: 20px;
+  font-weight: 400;
+  list-style: none;
+  border: 2pt solid var(--mate-green);
+  border-radius: 90px;
+  cursor: pointer;
+}
+
+.filter__item--active {
+  color: var(--beige);
+  background-color: var(--mate-green);
+}
+
+.catalog {
+  display: flex;
+  align-items: center;
+}
+
+.catalog__button {
+  width: 60px;
+  height: 60px;
+  margin: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3pt solid var(--mate-green);
+  border-radius: 100%;
+  cursor: pointer;
+}
+
+.catalog__button--disabled {
+  border-color: #b8b4b4;
+}
+
+.catalog__button img {
+  height: 40px;
+}
+
+#prevBtn {
+  transform: rotate(180deg);
+}
+
+.galleryContainer {
+  display: flex;
+  width: 735px;
+  overflow: hidden;
+}
+
+.galleryGrid {
+  padding: 15px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 15px;
+}
+
+.productItem {
+  width: 225px;
+  height: 225px;
+  background-color: var(--mate-green);
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: ease-in-out .3s;
+}
+
+.productItem:hover {
+  transform: scale(1.05);
+}
+
+.productItem img {
+  width: inherit;
 }
