--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
 
 .hero {
   height: 100vh;
+  min-height: 760px;
   background-image: url(./src/media/img/header_img.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -30,7 +31,7 @@ body {
   flex-direction: column;
 }
 
-#hero::before {
+.hero::before {
   position: absolute;
   content: "";
   inset: 0;
@@ -43,46 +44,43 @@ body {
   position: relative;
   margin: 20px 30px 0 30px;
   height: 70px;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
 }
 
 .nav__logo {
   display: flex;
   align-items: center;
+  justify-self: flex-start;
 }
 
 .nav__logo img {
   height: 40px;
-  width: auto;
 }
 
 h1 {
   font-family: 'Noto Sans';
   font-size: 30px;
   font-weight: 300;
+  text-wrap: nowrap;
   margin-left: 10px;
   color: var(--beige);
 }
 
+#menuBtn {
+  display: none;
+}
+
 .nav__menu {
-  position: absolute;
-  right: 25%;
-  height: 100%;
-  width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.nav__menu ul {
-  position: absolute;
-  display: flex;
-  justify-content: center;
+  gap: 40px;
+  justify-self: center;
 }
 
 .navItem {
-  margin: 0px 20px;
   list-style: none;
   cursor: pointer;
   font-size: 20px;
@@ -109,7 +107,12 @@ h1 {
 
 .navItem a {
   text-decoration: none;
+  text-wrap: nowrap;
   color: var(--beige);
+}
+
+.nav__ig {
+  justify-self: end;
 }
 
 .nav__ig a img {
@@ -131,6 +134,7 @@ h1 {
 .cta__text {
   font-size: 48px;
   font-weight: 600;
+  text-wrap: nowrap;
   color: var(--beige);
 }
 
@@ -249,11 +253,12 @@ main {
 
 .galleryContainer {
   display: flex;
-  width: 735px;
+  max-width: 735px;
   overflow: hidden;
 }
 
 .galleryGrid {
+  width: 100%;
   padding: 15px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -458,6 +463,4 @@ footer a {
 
 /* Media Queries */
 
-@media (max-width: 768px) {
-  
-}
+
