--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 .hero {
   height: 100vh;
   min-height: 760px;
-  background-image: url(./src/media/img/header_img.jpg);
+  background-image: url(./src/media/img/header_img.webp);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -35,7 +35,7 @@ body {
   position: absolute;
   content: "";
   inset: 0;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, .7);
 }
 
 /* Navbar */
@@ -45,7 +45,7 @@ body {
   margin: 20px 30px 0 30px;
   height: 70px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 2fr;
   align-items: center;
 }
 
@@ -61,7 +61,7 @@ body {
 
 h1 {
   font-family: 'Noto Sans';
-  font-size: 30px;
+  font-size: 2rem;
   font-weight: 300;
   text-wrap: nowrap;
   margin-left: 10px;
@@ -72,18 +72,31 @@ h1 {
   display: none;
 }
 
+.menuBtn__line {
+  width: 30px;
+  height: 3px;
+  background-color: var(--beige);
+  border-radius: 25px;
+}
+
+#menuContainer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .nav__menu {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 40px;
   justify-self: center;
+  flex-grow: 2;
 }
 
 .navItem {
   list-style: none;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight:400;
   color: var(--beige);
   position: relative;
@@ -112,7 +125,15 @@ h1 {
 }
 
 .nav__ig {
+  margin-left: 60px;
   justify-self: end;
+}
+
+.nav__ig a {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav__ig a img {
@@ -132,7 +153,7 @@ h1 {
 }
 
 .cta__text {
-  font-size: 48px;
+  font-size: 3rem;
   font-weight: 600;
   text-wrap: nowrap;
   color: var(--beige);
@@ -151,7 +172,7 @@ h1 {
 
 .cta__link {
   color: var(--mate-green);
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 500;
   text-decoration: none;
 }
@@ -178,10 +199,11 @@ h1 {
 }
 
 main {
+  max-width: 1100px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 /* Products Section */
@@ -195,21 +217,26 @@ main {
 
 .sectionTitle {
   margin-top: 50px;
-  font-size: 40px;
+  font-size: 2.5rem;
   font-weight: 500;
   color: var(--mate-green);
+  text-wrap: nowrap;
 }
 
 .filter {
   display: flex;
-  margin: 20px 0 30px;
+  margin: 40px 0 30px;
   gap: 25px;
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  scrollbar-width: none;
 }
 
 .filter__item {
   padding: 5px 16px;
   color: var(--mate-green);
-  font-size: 20px;
+  font-size: 1rem;
   font-weight: 400;
   list-style: none;
   border: 2pt solid var(--mate-green);
@@ -228,8 +255,8 @@ main {
 }
 
 .catalog__button {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   margin: 20px;
   display: flex;
   align-items: center;
@@ -244,7 +271,7 @@ main {
 }
 
 .catalog__button img {
-  height: 40px;
+  height: 30px;
 }
 
 #prevBtn {
@@ -252,13 +279,23 @@ main {
 }
 
 .galleryContainer {
-  display: flex;
-  max-width: 735px;
+  width: 680px;
+  height: 680px;
+  position: relative;
   overflow: hidden;
 }
 
+.galleryGridsContainer {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0px;
+}
+
 .galleryGrid {
-  width: 100%;
+  flex-shrink: 0;
+  width: 650px;
+  height: 650px;
   padding: 15px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -267,17 +304,21 @@ main {
 }
 
 .productItem {
-  width: 225px;
-  height: 225px;
   background-color: var(--mate-green);
   border-radius: 10px;
-  object-fit:cover;
+  overflow: hidden;
   cursor: pointer;
   transition: ease-in-out .3s;
 }
 
 .productItem:hover {
   transform: scale(1.05);
+}
+
+.productItem img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .pagination {
@@ -301,10 +342,10 @@ main {
 
 #quote {
   height: 400px;
-  margin: 100px auto;
+  margin: 100px 0;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   gap: 100px;
 }
 
@@ -330,14 +371,15 @@ main {
 
 .quote__author {
   font-family: 'Noto Sans';
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 700;
   color: var(--mate-green);
 }
 
 #about {
   height: 100vh;
-  margin-bottom: 100px;
+  min-height: 760px;
+  width: 100vw;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -389,6 +431,7 @@ main {
 
 #contact {
   height: 600px;
+  max-width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
@@ -405,8 +448,8 @@ main {
 
 .contact__text {
   margin-top: 10px;
-  font-size: 1.5rem;
-  font-weight: 500;
+  font-size: 1.25rem;
+  font-weight: 400;
   color: var(--mate-green);
 }
 
@@ -429,11 +472,12 @@ main {
 .contact__button a {
   color: var(--beige);
   text-decoration: none;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 .contact__img {
-  height: 100%;
+  margin-top: auto;
+  max-width: 30%;
 }
 
 footer {
@@ -463,4 +507,125 @@ footer a {
 
 /* Media Queries */
 
+@media (max-width: 1440px) {
+  
+  .nav {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
+}
+
+@media (max-width: 1280px) {
+  .cta {
+    margin: 0 auto;
+    align-items: center;
+  }
+
+  .contact__ctaContainer {
+    margin-left: 60px;
+  }
+
+  .contact__img {
+    margin-right: 60px;
+  }
+}
+
+@media (max-width: 1024px) {
+  
+  
+  #menuBtn {
+    position: absolute;
+    top: 20px;
+    right: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 7px;
+    cursor: pointer;
+  }
+
+  #menuContainer {
+    display: none;
+  }
+
+  #quote {
+    gap: 30px;
+  }
+
+  
+}
+
+@media (max-width: 980px) {
+
+  .cta__text {
+    font-size: 2.5rem;
+  }
+
+  .cta__button {
+    height: 48px;
+    width: 200px;
+  }
+
+  .cta__link {
+    font-size: 1.25rem;
+  }
+
+  .sectionTitle {
+    font-size: 2rem;
+  }
+
+  .filter {
+    max-width: 550px;
+    overflow: scroll;
+  }
+
+  .galleryContainer {
+    width: 480px;
+    height: 480px;
+  }
+
+  .galleryGrid {
+    width: 450px;
+    height: 450px;
+    gap: 10px;
+  }
+
+  #quote {
+    margin: 0px;
+  }
+
+  .quote__img {
+    display: none;
+  }
+
+  .quote__text {
+    text-align: start;
+  }
+
+  #about p {
+    font-size: 1.25rem;
+  }
+
+  #contact {
+    height: 500px;
+  }
+
+/*   .contact__text {
+    font-size: 1.25rem;
+  } */
+
+  .contact__button {
+    height: 48px;
+    width: 200px;
+  }
+
+  .contact__button img {
+    width: 30px;
+
+  }
+
+  .contact__button a {
+    font-size: 1.25rem;
+  }
+
+}
