--- a/styles.css
+++ b/styles.css
@@ -791,7 +791,7 @@ footer a {
   }
   
   footer p {
-    font-size: 1rem;
+    font-size: .75rem;
     font-weight:300;
     color: var(--beige);
   }
