--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
 
 .nav {
   position: relative;
-  margin: 20px 30px 0 30px;
+  padding: 20px 30px 0 30px;
   height: 70px;
   /* width: 100vw; */
   display: grid;
@@ -548,8 +548,41 @@ footer a {
     cursor: pointer;
   }
 
+  #menuBtn {
+    z-index: 100;
+    width: 30px;
+    justify-self: end;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 7px;
+    cursor: pointer;
+  }
+
   #menuContainer {
-    display: none;
+    width: 100vw;
+    height: 450px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: var(--mate-green);
+  }
+
+  .nav__menu {
+    max-height: 250px;
+    margin-top: 120px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  .nav__ig {
+    margin-left: 0px;
   }
 
   #quote {
@@ -667,7 +700,7 @@ footer a {
 @media (max-width: 480px) {
 
   .nav {
-    margin: 15px 20px 0 15px;
+    padding: 15px 20px 0 15px;
   }
 
   .nav__logo img {
@@ -712,10 +745,6 @@ footer a {
     border-width: 2px;
     margin: 0; */
   }
-
-/*   .catalog__button img {
-    height: 15px;
-  } */
 
   .galleryContainer {
     width: 350px;
@@ -772,11 +801,6 @@ footer a {
     text-align: center;
     padding: 0 20px;
   }
-
-/*   .contact__button {
-    width: 175px;
-    height: 40px;
-  } */
 
   .contact__button a {
     font-size: 1.25rem;
