--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,7 @@ main {
   transform: scale(1.05);
 }
 
-.productItem img {
+.productItem__img {
   width: 100%;
   height: 100%;
   object-fit: cover;
