--- a/styles.css
+++ b/styles.css
@@ -280,6 +280,10 @@ main {
   transform: rotate(180deg);
 }
 
+.hidden {
+  display: none;
+}
+
 .galleryContainer {
   width: 680px;
   height: 680px;
@@ -292,6 +296,7 @@ main {
   position: absolute;
   top: 0;
   left: 0px;
+  transition: transform .3s ease-in-out;
 }
 
 .galleryGrid {
@@ -306,11 +311,71 @@ main {
 }
 
 .productItem {
-  background-color: var(--mate-green);
+  background-color: #ddd8c8;
   border-radius: 10px;
   overflow: hidden;
   cursor: pointer;
   transition: ease-in-out .3s;
+  opacity: 0%;
+  animation: productAppear .3s ease-in-out 1 forwards;
+}
+
+.productLoader {
+  background-color: #ddd8c8;
+  border-radius: 10px;
+  animation: productLoader 1s ease-in-out infinite;
+}
+
+.productLoader:nth-child(2) {
+  animation-delay: .25s;
+}
+
+.productLoader:nth-child(3) {
+  animation-delay: .5s;
+}
+
+.productLoader:nth-child(5) {
+  animation-delay: .25s;
+}
+
+.productLoader:nth-child(6) {
+  animation-delay: .5s;
+}
+
+.productLoader:nth-child(8) {
+  animation-delay: .25s;
+}
+
+.productLoader:nth-child(9) {
+  animation-delay: .5s;
+}
+
+
+@keyframes productLoader {
+
+  0% {
+    opacity: 100%;
+
+  }
+  50% {
+    opacity: 50%;
+
+  }
+  100% {
+    opacity: 100%;
+
+
+  }
+  
+}
+
+@keyframes productAppear {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
 }
 
 .productItem:hover {
@@ -334,6 +399,7 @@ main {
   height: 10px;
   background-color: #D9D9D9;
   border-radius: 100%;
+  cursor: pointer;
 }
 
 .pageIndicator--active {
