--- a/styles.css
+++ b/styles.css
@@ -316,7 +316,6 @@ main {
   overflow: hidden;
   cursor: pointer;
   transition: ease-in-out .3s;
-  opacity: 0%;
   animation: productAppear .3s ease-in-out 1 forwards;
 }
 
@@ -355,23 +354,18 @@ main {
 
   0% {
     opacity: 100%;
-
   }
   50% {
     opacity: 50%;
-
   }
   100% {
     opacity: 100%;
-
-
   }
-  
 }
 
 @keyframes productAppear {
   0% {
-    opacity: 0%;
+    opacity: 50%;
   }
   100% {
     opacity: 100%;
@@ -386,6 +380,66 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.emptyCategory__container {
+  width: 650px;
+  height: 650px;
+  margin: 15px;
+  background-color: #eee7d3;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.emptyCategory__message {
+  margin: 0 25px;
+  font-size: 1.5rem;
+  color: var(--mate-green);
+  text-align: center;
+}
+
+.emptyCategory__suggestion {
+  margin: 0 25px;
+  font-size: 1rem;
+  color: var(--mate-green);
+  text-align: center;
+}
+
+.loadingError__container {
+  width: 650px;
+  height: 650px;
+  margin: 15px;
+  background-color: #eee7d3;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.loadingError__message {
+  margin: 0 25px;
+  font-size: 1.5rem;
+  color: var(--mate-green);
+  text-align: center;
+}
+
+.catalogLoadBtn {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 200px;
+  color: var(--beige);
+  font-size: 1.25rem;
+  background-color: var(--mate-green);
+  border-radius: 10px;
 }
 
 .pageIndicator__container {
